feat(generator): 修改代码生成器模板

--- a/renren-generator/src/main/resources/template/Service.java.vm
+++ b/renren-generator/src/main/resources/template/Service.java.vm
@@ -7,7 +7,7 @@ import ${package}.${moduleName}.entity.${className}Entity;
 import java.util.Map;
 
 /**
- * ${comments}
+ * ${comments}Service接口
  *
  * @author ${author}
  * @email ${email}
