--- a/renren-generator/src/main/resources/template/Controller.java.vm
+++ b/renren-generator/src/main/resources/template/Controller.java.vm
@@ -18,7 +18,7 @@ import ${mainPath}.common.utils.R;
 
 
 /**
- * ${comments}
+ * ${comments}Controller
  *
  * @author ${author}
  * @email ${email}
