--- a/renren-generator/src/main/resources/template/Dao.java.vm
+++ b/renren-generator/src/main/resources/template/Dao.java.vm
@@ -5,7 +5,7 @@ import com.baomidou.mybatisplus.core.mapper.BaseMapper;
 import org.apache.ibatis.annotations.Mapper;
 
 /**
- * ${comments}
+ * ${comments}Dao
  * 
  * @author ${author}
  * @email ${email}
