--- a/renren-generator/src/main/resources/template/Entity.java.vm
+++ b/renren-generator/src/main/resources/template/Entity.java.vm
@@ -11,7 +11,7 @@ import java.util.Date;
 import lombok.Data;
 
 /**
- * ${comments}
+ * ${comments}Entity
  * 
  * @author ${author}
  * @email ${email}
