feat(generator): 修改生成器vue模板，添加默认引入Tool.js和GlobalConstant.js

--- a/renren-generator/src/main/resources/template/index.vue.vm
+++ b/renren-generator/src/main/resources/template/index.vue.vm
@@ -58,6 +58,8 @@
 
 <script>
   import AddOrUpdate from './${pathName}-add-or-update'
+  import Tools from "../../../utils/Tool"
+  import GlobalConst from "../../../utils/GlobalConst"
   export default {
     data () {
       return {
