--- a/renren-generator/src/main/resources/template/add-or-update.vue.vm
+++ b/renren-generator/src/main/resources/template/add-or-update.vue.vm
@@ -20,6 +20,8 @@
 </template>
 
 <script>
+  import Tools from "../../../utils/Tool"
+  import GlobalConst from "../../../utils/GlobalConst"
   export default {
     data () {
       return {
