--- a/renren-generator/src/main/resources/template/index.vue.vm
+++ b/renren-generator/src/main/resources/template/index.vue.vm
@@ -94,7 +94,7 @@
             'key': this.dataForm.key
           })
         }).then(({data}) => {
-          if (data && data.code === 0) {
+          if (data && data.code === GlobalConst.RESPONSE_CODE.OK) {
             this.dataList = data.page.list
             this.totalPage = data.page.totalCount
           } else {
@@ -141,7 +141,7 @@
             method: 'post',
             data: this.$http.adornData(ids, false)
           }).then(({data}) => {
-            if (data && data.code === 0) {
+            if (data && data.code === GlobalConst.RESPONSE_CODE.OK) {
               #[[this.$message({]]#
                 message: '操作成功',
                 type: 'success',
