fix(*): 回滚由后端格式化时间再传给前端。修改为由前端接收到后端数据后，通过格式化函数进行格式化

--- a/renren-generator/src/main/resources/template/index.vue.vm
+++ b/renren-generator/src/main/resources/template/index.vue.vm
@@ -23,7 +23,7 @@
         width="50">
       </el-table-column>
 #foreach($column in $columns)
-  #if($column.columnName!="is_delete")
+  #if($column.columnName != "gmt_create" and $column.columnName != "is_delete" and $column.columnName != "gmt_modified" and $column.columnName != "update_version")
       <el-table-column
         prop="${column.attrname}"
         header-align="center"
