--- a/renren-generator/src/main/resources/template/Controller.java.vm
+++ b/renren-generator/src/main/resources/template/Controller.java.vm
@@ -1,7 +1,15 @@
-package ${package}.${moduleName}.controller;
+package ${package}.${moduleName}.api;
 
-import java.util.Arrays;
-import java.util.Map;
+import ${mainPath}.common.mybatis.util.PageUtils;
+import ${mainPath}.common.web.util.R;
+import ${mainPath}.common.web.util.valid.ValidatorUtil;
+import ${mainPath}.common.web.util.valid.group.AddGroup;
+import ${mainPath}.common.web.util.valid.group.UpdateGroup;
+
+import ${package}.${moduleName}.application.${className}CommandService;
+import ${package}.${moduleName}.application.${className}QueryService;
+import ${package}.${moduleName}.application.command.${className}Command;
+import ${package}.${moduleName}.application.dto.${className}Dto;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -10,15 +18,12 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import ${package}.${moduleName}.entity.${className}Entity;
-import ${package}.${moduleName}.service.${className}Service;
-import ${mainPath}.common.utils.PageUtils;
-import ${mainPath}.common.utils.R;
-
-
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
 
 /**
- * ${comments}Controller
+ * ${comments}-Controller
  *
  * @author ${author}
  * @email ${email}
@@ -28,47 +33,67 @@ import ${mainPath}.common.utils.R;
 @RequestMapping("${moduleName}/${pathName}")
 public class ${className}Controller {
     @Autowired
-    private ${className}Service ${classname}Service;
+    private ${className}QueryService ${classname}QueryService;
+
+    @Autowired
+    private ${className}CommandService ${classname}CommandService;
 
     /**
      * 列表
      */
     @RequestMapping("/list")
     public R list(@RequestParam Map<String, Object> params){
-        PageUtils page = ${classname}Service.queryPage(params);
-
+        PageUtils page = ${classname}QueryService.queryPage(params);
         return R.ok().put("page", page);
     }
-
 
     /**
      * 信息
      */
     @RequestMapping("/info/{${pk.attrname}}")
     public R info(@PathVariable("${pk.attrname}") ${pk.attrType} ${pk.attrname}){
-		${className}Entity ${classname} = ${classname}Service.getById(${pk.attrname});
-
-        return R.ok().put("${classname}", ${classname});
+        ${className}Dto ${classname}Dto = ${classname}QueryService.getById(${pk.attrname});
+        return R.ok().put("${classname}", ${classname}Dto);
     }
 
     /**
      * 保存
      */
     @RequestMapping("/save")
-    public R save(@RequestBody ${className}Entity ${classname}){
-		${classname}Service.save(${classname});
-
-        return R.ok();
+    public R save(@RequestBody ${className}Command ${classname}Command){
+        ValidatorUtil.validateEntity(${classname}Command, AddGroup.class);
+        ${pk.attrType} saveId = ${classname}CommandService.saveOrUpdate(${classname}Command);
+        return R.ok().put("saveId", saveId);
+    }
+    
+    /**
+     * 批量保存
+     */
+    @RequestMapping("/batchSave")
+    public R batchSave(@RequestBody List<${className}Command> ${classname}CommandList) {
+        ValidatorUtil.validateEntity(${classname}CommandList, AddGroup.class);
+        ${pk.attrType}[] saveIds = ${classname}CommandService.batchSaveOrUpdate(${classname}CommandList);
+        return R.ok().put("saveIds", saveIds);
     }
 
     /**
      * 修改
      */
     @RequestMapping("/update")
-    public R update(@RequestBody ${className}Entity ${classname}){
-		${classname}Service.updateById(${classname});
+    public R update(@RequestBody ${className}Command ${classname}Command){
+        ValidatorUtil.validateEntity(${classname}Command, UpdateGroup.class);
+        ${pk.attrType} updateId = ${classname}CommandService.saveOrUpdate(${classname}Command);
+        return R.ok().put("updateId", updateId);
+    }
 
-        return R.ok();
+    /**
+     * 批量修改
+     */
+    @RequestMapping("/batchUpdate")
+    public R batchUpdate(@RequestBody List<${className}Command> ${classname}CommandList) {
+        ValidatorUtil.validateEntity(${classname}CommandList, UpdateGroup.class);
+        ${pk.attrType}[] updateIds = ${classname}CommandService.batchSaveOrUpdate(${classname}CommandList);
+        return R.ok().put("updateIds",updateIds);
     }
 
     /**
@@ -76,8 +101,16 @@ public class ${className}Controller {
      */
     @RequestMapping("/delete")
     public R delete(@RequestBody ${pk.attrType}[] ${pk.attrname}s){
-		${classname}Service.removeByIds(Arrays.asList(${pk.attrname}s));
+        ${classname}CommandService.delete(Arrays.asList(${pk.attrname}s));
+        return R.ok();
+    }
 
+    /**
+     * 删除
+     */
+    @RequestMapping("/delete/{${pk.attrname}}")
+    public R delete(@PathVariable("${pk.attrname}") ${pk.attrType} ${pk.attrname}) {
+        ${classname}CommandService.delete(${pk.attrname});
         return R.ok();
     }
 
