fix(generator): 修复代码生成器生成代码报错
修复以下内容
1. 当数据库字段有decimal类型字段时，未导入对应的Java类BigDecimal
2. 当数据库字段有Date类时，未导入Date类
3. Assembler模板，fromDomain()方法中，setId,未设置为set列名称
4. 调整doMain中的主键Id类，构造函数中，校验ID是否为空的错误信息

--- a/renren-generator/src/main/resources/template/Assembler.java.vm
+++ b/renren-generator/src/main/resources/template/Assembler.java.vm
@@ -51,7 +51,7 @@ public class ${className}Assembler {
             return null;
         }
         ${className}Dto result = new ${className}Dto();
-        result.setId(EntityId.getId(${classname}.get${pk.attrName}()));
+        result.set${pk.attrName}(EntityId.getId(${classname}.get${pk.attrName}()));
 
 #foreach ($column in $columns)
 #if($column.columnName != $pk.columnName && !$column.commonField)
