--- a/renren-generator/src/main/resources/template/Dto.java.vm
+++ b/renren-generator/src/main/resources/template/Dto.java.vm
@@ -2,7 +2,12 @@ package ${package}.${moduleName}.application.dto;
 
 import lombok.Data;
 
+#if(${hasBigDecimal})
+import java.math.BigDecimal;
+#end
+#if(${hasDate})
 import java.util.Date;
+#end
 
 /**
  * ${comments}-数据传输对象
