--- a/renren-generator/src/main/resources/template/QueryService.java.vm
+++ b/renren-generator/src/main/resources/template/QueryService.java.vm
@@ -1,4 +1,4 @@
-package ${package}${moduleName}.application;
+package ${package}.${moduleName}.application;
 
 import com.learn.project.common.mybatis.util.PageUtils;
 import ${package}.${moduleName}.application.dto.${className}Dto;
